# predictiveops-worldmodel

./: .gitignore  AGENTS.md  DATASETS_PATHS.md  README.md  pyproject.toml
configs/benchmarks/: legacy_mvp.yaml
configs/compute/: workstation_cuda_12gb.yaml
data/manifests/: datasets.yaml  licenses.yaml
docs/: data_priority_a.md  legacy_mvp.md  runtime_compute.md
outputs/baselines/legacy_cnc_failure_soon_smoke/: config_resolved.json  (+1 more)
outputs/comparisons/: legacy_cnc_world_model_vs_baselines.json
outputs/data/: legacy_cnc_windows_audit.json  legacy_mvtec_bottle_audit.json
outputs/system/: compute_profile.json
scripts/benchmarks/: run_legacy_cnc_baselines.py  run_legacy_mvtec_baselines.py
scripts/data/: audit_legacy_cnc_windows.py  audit_legacy_mvtec_bottle.py
scripts/download/: requested_dataset_instructions.py
scripts/evaluate/: check_sota_gate.py  compare_legacy_cnc_world_model.py
scripts/system/: print_compute_profile.py
scripts/train/: train_legacy_cnc_world_model.py
src/forgeworld/: __init__.py
tests/integration/: test_legacy_cnc_local_manifest.py  test_legacy_cnc_world_model_smoke.py  test_legacy_mvtec_local_manifest.py  test_requested_dataset_instructions_cli.py  test_toy_dataset_adapter.py
tests/unit/: test_comparison.py  test_compute.py  test_contracts.py  test_lead_time.py  test_leakage.py  test_legacy_cnc_adapter.py  test_legacy_cnc_baselines.py  test_legacy_mvtec_adapter.py  test_legacy_mvtec_baselines.py  test_priority_datasets.py  test_sensor_world_model.py  test_sota_gate.py  test_splits.py  test_timestamps.py  test_token_batch.py
(+40 files in other folders)
